--- a/index.html
+++ b/index.html
@@ -4,10 +4,51 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
-		<title>My Project</title>
+		<title>Sticky Navigation</title>
 	</head>
 	<body>
-		<h1>Project Starter</h1>
+		<nav class="nav">
+			<!-- putting a max-width to the container for extra wide screens so the logo and links dont go too wide at the edge of the screens -->
+			<div class="container">
+				<h1 class="logo"><a href="#">My Website</a></h1>
+				<ul>
+					<li><a href="#" class="active">Home</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Services</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</div>
+			<!-- /.container -->
+		</nav>
+		<!-- /.nav --> 
+
+		<div class="hero">
+			<div class="container">
+				<h1>Welcome to My Website</h1>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit, quam!</p>
+			</div>
+			<!-- /.container -->
+		</div>
+		<!-- /.hero -->
+
+		<section class="container content">
+			<h2>Content One</h2>
+			<p>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad neque inventore mollitia nisi, error,
+				assumenda natus aliquid fuga corporis est, itaque ex ab ullam vero unde suscipit. Sunt quae expedita
+				quis nam quod aliquid voluptate, voluptates nisi cum deserunt, aspernatur quaerat, eaque quidem sequi
+				harum voluptatibus magnam impedit consequatur cupiditate non maxime beatae pariatur ex placeat? Dolorum
+				dolore ut iste! Molestiae possimus doloribus, voluptatum numquam quibusdam vel ratione reprehenderit
+				quaerat recusandae, dolores sit eveniet mollitia soluta autem beatae sed accusantium omnis officia,
+				voluptatem aperiam illum praesentium distinctio! Dolore illo ratione adipisci soluta quos. Iure illo
+				accusantium beatae, quia repellendus enim!
+			</p>
+
+            <h3>Content Two</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta magnam, totam at veritatis consequatur esse voluptatem similique laboriosam odit, cumque iusto voluptates doloremque rerum quam libero cum inventore deleniti in ad incidunt animi accusamus saepe distinctio voluptatibus? Error veniam vel aliquam, enim voluptatem sit dolores temporibus obcaecati, deserunt laudantium voluptates.</p>
+		</section>
+		<!-- /.container content -->
+
 		<script src="script.js"></script>
 	</body>
 </html>
