--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div class="container">
 				<h1 class="logo"><a href="#">My Website</a></h1>
 				<ul>
-					<li><a href="#" class="active">Home</a></li>
+					<li><a href="#" class="current">Home</a></li>
 					<li><a href="#">About</a></li>
 					<li><a href="#">Services</a></li>
 					<li><a href="#">Contact</a></li>
@@ -20,7 +20,7 @@
 			</div>
 			<!-- /.container -->
 		</nav>
-		<!-- /.nav --> 
+		<!-- /.nav -->
 
 		<div class="hero">
 			<div class="container">
